@@ -1,5 +1,9 @@
 Changes with Apache 1.3b4
 
+  *) mod_unique_id was erroneously generating a second unique id when
+     an internal redirect occured.  Such redirects occur, for example,
+     when processing a DirectoryIndex match.  [Dean Gaudet]
+
   *) table_add, table_merge, and table_set include implicit pstrdup()
      of the key and value.  But in many cases this is not required
      because the key/value is a constant, or the value has been built
